# troll-sorts

./: LICENSE  README.md  pyproject.toml  test_troll.py
src/troll_sorts/: __init__.py  sorts.py  welcome.py
